--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="action_settings">Settings</string>
     <string name="search">Search</string>
     <string name="mau_cau">Clause</string>
-    <string name="thuc_hanh">Practice</string>
+    <string name="jlpt_test">JLPT Practice Test</string>
     <string name="format_so_ngay_luyen_tap">Number of days practicing: %s</string>
     <string name="format_mau_cau">Clause: %s</string>
     <string name="title_prompt">Enter The Title You Want:</string>
