Countdown, intial result and some changes on JLPTExam

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -30,10 +30,18 @@
     <string name="i_want_to_check_again">Tôi muốn kiểm tra lại</string>
     <string name="inputs_are_not_filled_fully">Dữ liệu chưa được nhập đầy đủ, bạn vẫn muốn kết thúc chứ?</string>
     <string name="turn_in">Tôi muốn nộp bài</string>
-    <string name="result">Chúc mừng!Bạn đã hoàn thành bài thi\nBạn có %d đáp án đúng</string>
     <string name="vocab_title">Từ Vựng</string>
     <string name="reading_title">Đọc Hiểu</string>
     <string name="grammar_title">Ngữ Pháp</string>
     <string name="head_of_text">Đây là câu hỏi đầu tiên!!!</string>
+    <string name="time_up">Hết Giờ!!!</string>
+    <string name="attempts">Số câu đã hoàn thành: </string>
+    <string name="test_performance"></string>
+    <string name="total_time">Thời Gian Hoàn Thành: </string>
+    <string name="wrong_answers">Số Câu Sai: </string>
+    <string name="right_answers">Số Câu Đúng: </string>
+    <string name="share">Chia Sẻ</string>
+    <string name="view_details">Xem Chi Tiết</string>
+    <string name="congrat">Chúc Mừng! Bạn Đã Hoàn Thành Bài Thi</string>
 
 </resources>
