--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -64,5 +64,8 @@
     <string name="search_topic">Tìm Kiếm Chủ Đề</string>
     <string name="memory_trick">Mẹo Nhớ</string>
     <string name="no_topic">Chưa Được Phân Loại</string>
+    <string name="add_memory_trick">Thêm Mẹo Nhớ</string>
+    <string name="number_of_user_examples">Bạn Đang Có %d Ví Dụ</string>
+    <string name="number_of_memory_tricks">Bạn Đang Có %d Mẹo Nhớ</string>
 
 </resources>
